# app

./: .env.example  beam  cookiecutter.json  pyproject.toml
app/: app.py
app/console/commands/: hello.py
app/http/controllers/: welcome.py
app/providers/: app_service_provider.py  route_service_provider.py
app/routes/: api.py  web.py
config/: app.py  view.py
database/migrations/: alembic.ini  env.py
database/migrations/versions/: 2025_04_05_150727_c8d0f25df695_create_sessions_table.py
tests/: conftest.py
tests/console/commands/: test_hello.py
tests/controllers/: test_welcome.py
